--- a/index.html
+++ b/index.html
@@ -51,7 +51,17 @@
             </div>
         </div>
     </header>
-    <main>main</main>
+    <main>
+        <div class="container">
+            <section>section</section>
+            +
+            <section>section</section>
+            +
+            <section>section</section>
+            +
+            <section>section</section>
+        </div>
+    </main>
     <footer class="footer">
         <div class="container">
             <div class="footer__top">
