--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="container">
-            <div class="header">
+            <div class="header" id="header">
                 <a class="logo" href="/">
                     <svg width="130" height="22" viewBox="0 0 130 22" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <g clip-path="url(#clip0_102992_2121)">
@@ -198,12 +198,13 @@
                     </svg>
                     <span> by Createx Studio</span>
                 </div>
-                <a href="/" class="footer__button">
+                <a href="#header" class="footer__button">
                     GO TO TOP
-                    <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <rect width="40" height="40" rx="4" fill="#FF5A30"/>
-                        <path fill-rule="evenodd" clip-rule="evenodd" d="M12.2929 23.7071C11.9024 23.3166 11.9024 22.6834 12.2929 22.2929L19.2929 15.2929C19.6834 14.9024 20.3166 14.9024 20.7071 15.2929L27.7071 22.2929C28.0976 22.6834 28.0976 23.3166 27.7071 23.7071C27.3166 24.0976 26.6834 24.0976 26.2929 23.7071L20 17.4142L13.7071 23.7071C13.3166 24.0976 12.6834 24.0976 12.2929 23.7071Z" fill="white"/>
-                    </svg>       
+                    <div class="footer__button_icon">
+                        <svg width="16" height="9" viewBox="0 0 16 9" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M0.292893 8.70711C-0.0976311 8.31658 -0.0976311 7.68342 0.292893 7.29289L7.29289 0.292893C7.68342 -0.0976315 8.31658 -0.0976315 8.70711 0.292893L15.7071 7.29289C16.0976 7.68342 16.0976 8.31658 15.7071 8.70711C15.3166 9.09763 14.6834 9.09763 14.2929 8.70711L8 2.41421L1.70711 8.70711C1.31658 9.09763 0.683417 9.09763 0.292893 8.70711Z" fill="white"/>
+                        </svg>
+                    </div>       
                 </a>
             </div>
         </div>
