--- a/index.html
+++ b/index.html
@@ -52,15 +52,40 @@
         </div>
     </header>
     <main>
-        <div class="container">
-            <section>section</section>
-            +
-            <section>section</section>
-            +
-            <section>section</section>
-            +
-            <section>section</section>
-        </div>
+        <section>section</section>
+        +
+        <section>section</section>
+        +
+        <section>section</section>
+        +
+        <section class="feedback">
+            <div class="container">
+                <form class="form" action="#">
+                    <h3>A quick way to discuss details</h3>
+                    <label>
+                        <span>Name*</span>
+                        <input class="form__name" type="text" name="name" id="name" placeholder="Your name">
+                    </label>
+                    <label>
+                        <span>Phone*</span>
+                        <input class="form__phone" type="tel" name="tel" id="tel" placeholder="Your phone number">
+                    </label>
+                    <label>
+                        <span>Email</span>
+                        <input class="form__email" type="email" name="email" id="email" placeholder="Your working email">
+                    </label>
+                    <label>
+                        <span>Message*</span>
+                        <textarea class="form__message" name="message" id="message" placeholder="Your message"></textarea>
+                    </label>
+                    <label class="form__checkbox">
+                        <input type="checkbox" name="checkbox" id="checkbox" checked>
+                        <span>I agree to receive communications from Createx Construction Bureau.</span>
+                    </label>                                                                             
+                    <input class="form__btn" type="submit" value="SEND REQUEST">
+                </form>
+            </div>
+        </section>
     </main>
     <footer class="footer">
         <div class="container">
