--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <nav class="header__nav">
                     <ul class="header__list">
                         <li class="header__item"><a href="/">About Us</a></li>
-                        <li class="header__item"><a href="/">Services</a></li>
+                        <li class="header__item"><a href="./Service/index.html">Services</a></li>
                         <li class="header__item"><a href="/">Work</a></li>
                         <li class="header__item"><a href="/">News</a></li>
                         <li class="header__item"><a href="/">Contacts</a></li>
