'section_preview,section_construction'

--- a/index.html
+++ b/index.html
@@ -52,10 +52,41 @@
         </div>
     </header>
     <main>
-        <section>section</section>
-        +
-        <section>section</section>
-        +
+        <section class="preview">
+            <div class="container">
+                <div class="preview__container">
+                    <h1 class="preview__title">CREATE<span>X</span><br>CONSTRUCTION</h1>
+                    <p class="preview__subtitle">Cras ultrices leo vitae non viverra. Fringilla nisi quisque<br>
+                        consequat, dignissim vitae proin ipsum sed. Pellentesque nec<br>
+                        turpis purus eget pellentesque integer ipsum elementum felis.</p>
+                    <div class="preview__btns">
+                        <button class="preview__btn about__btn"><p class="preview__btn_content about__content">LEARN MORE ABOUT US</p></button>
+                        <button class="preview__btn submit__btn"><p class="preview__btn_content submit__content">SUBMIT REQUEST</p></button>
+                    </div>
+                    <div class="slider">
+                        <ul class="slider__breadcrumbs">
+                            <li class="slider__breadcrumb"><p class="slider__breadcrumb_item slider__breadcrumb_active">01</p></li>
+                            <li class="slider__breadcrumb"><p class="slider__breadcrumb_item">02</p></li>
+                            <li class="slider__breadcrumb"><p class="slider__breadcrumb_item">03</p></li>
+                            <li class="slider__breadcrumb"><p class="slider__breadcrumb_item">04</p></li>
+                        </ul>
+                    </div>
+                    <div class="arrows__btn">
+                        <button class="arrow__left_btn arrow__active"><img src="image/arrow.svg" alt="arrow__left"></button>
+                        <button class="arrow__right_btn arrow__active"><img src="image/arrow.svg" alt="arrow__right"></button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="construction">
+            <div class="container">
+                <div class="construction__container">
+                    <h2 class="construction__title">We are Createx Construction Bureau </h2>
+                    <p class="construction__text">We are rightfully considered to be the best construction company in the USA.</p>
+                    <iframe width="1230" height="500" src="https://www.youtube.com/embed/FXutvOcj4Y4?si=wmu79O0dIb2N3diP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
+            </div>
+        </section>
         <section>section</section>
         +
         <section class="feedback">
