--- a/Work/Work.html
+++ b/Work/Work.html
@@ -233,11 +233,44 @@
 
         <section class="client">
             <div class="container">
-                <div class="client__swiper">
-
+                <div class="reviews">
+                    <div class="reviews__text">
+                        <h2>What our clients are saying</h2>
+                        <div class="swiper">
+                            <div class="slide">
+                                <img src="../images/Work/swiper_avatar.png" alt="Shawn Edwards">
+                                <p>Ipsum aute sunt aliquip aute et occaecat. Anim minim do cillum eiusmod enim. Consectetur magna cillum consequat minim  laboris cillum laboris voluptate minim proident exercitation ullamco. </p>
+                                <strong>Shawn Edwards</strong>
+                                <span>Position, Company name</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="reviews__image">
+                        <img src="../images/Work/swiper_image.png" alt="our clients">
+                    </div>
                 </div>
-                <div class="client__brands">
-
+                <div class="brands">
+                    <h2 class="brands__title">Our clients</h2>
+                    <ul class="brands__list">
+                        <li class="brands__item">
+                            <img src="../images/Work/our_clients.png" alt="Sunset Realty">
+                        </li>
+                        <li class="brands__item">
+                            <img src="../images/Work/our_clients.png" alt="Sunset Realty">
+                        </li>
+                        <li class="brands__item">
+                            <img src="../images/Work/our_clients.png" alt="Sunset Realty">
+                        </li>
+                        <li class="brands__item">
+                            <img src="../images/Work/our_clients.png" alt="Sunset Realty">
+                        </li>
+                        <li class="brands__item">
+                            <img src="../images/Work/our_clients.png" alt="Sunset Realty">
+                        </li>
+                        <li class="brands__item">
+                            <img src="../images/Work/our_clients.png" alt="Sunset Realty">
+                        </li>
+                    </ul>
                 </div>
             </div>
         </section>
