--- a/Work/Work.html
+++ b/Work/Work.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/styles.css">
-    <link rel="stylesheet" href="./Work.css">
     <title>CREATEX</title>
+    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
+    <link rel="stylesheet" href="./Work.css">
+    <script defer src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script defer src="./WorkSwiper.js"></script>
 </head>
 <body>
     <header>
@@ -236,15 +239,33 @@
                 <div class="reviews">
                     <div class="reviews__text">
                         <h2>What our clients are saying</h2>
+
                         <div class="swiper">
-                            <div class="slide">
+                            <div class="swiper-wrapper">
+                              <div class="swiper-slide">
                                 <img src="../images/Work/swiper_avatar.png" alt="Shawn Edwards">
                                 <p>Ipsum aute sunt aliquip aute et occaecat. Anim minim do cillum eiusmod enim. Consectetur magna cillum consequat minim  laboris cillum laboris voluptate minim proident exercitation ullamco. </p>
                                 <strong>Shawn Edwards</strong>
                                 <span>Position, Company name</span>
+                              </div>
+                              <div class="swiper-slide">
+                                <img src="../images/Work/swiper_avatar.png" alt="Shawn Edwards">
+                                <p>Ipsum aute sunt aliquip aute et occaecat. Anim minim do cillum eiusmod enim. Consectetur magna cillum consequat minim  laboris cillum laboris voluptate minim proident exercitation ullamco. </p>
+                                <strong>Shawn Edwards</strong>
+                                <span>Position, Company name</span>
+                              </div>
+                              <div class="swiper-slide">
+                                <img src="../images/Work/swiper_avatar.png" alt="Shawn Edwards">
+                                <p>Ipsum aute sunt aliquip aute et occaecat. Anim minim do cillum eiusmod enim. Consectetur magna cillum consequat minim  laboris cillum laboris voluptate minim proident exercitation ullamco. </p>
+                                <strong>Shawn Edwards</strong>
+                                <span>Position, Company name</span>
+                              </div>
                             </div>
-                        </div>
+                            <div class="swiper-button-prev"></div>
+                            <div class="swiper-button-next"></div>                        
+                          </div>
                     </div>
+
                     <div class="reviews__image">
                         <img src="../images/Work/swiper_image.png" alt="our clients">
                     </div>
