--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <div class="construction__container">
                     <h2 class="construction__title">We are Createx Construction Bureau </h2>
                     <p class="construction__text">We are rightfully considered to be the best construction company in the USA.</p>
-                    <iframe width="1230" height="500" src="https://www.youtube.com/embed/FXutvOcj4Y4?si=wmu79O0dIb2N3diP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <iframe width="1230" height="671" src="https://www.youtube.com/embed/35yK3VjeJ0w?si=maB8GeuR56-Qh1bF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
             </div>
         </section>
@@ -114,6 +114,8 @@
         </section>
         <form class="form__question">
             <div class="container">
+                <div class="form__container">
+                    <div class="form__container_position">
                 <h4 class="question">Want to know more? Ask us a question:</h4>
                 <div class="form__items">
                     <div class="mini__form_item">
@@ -137,6 +139,8 @@
                     <div class="mini__form_item">
                         <input class="mini__form_btn" type="submit" value="SEND">
                     </div>
+                </div>
+                </div>
                 </div>
             </div>
         </form>
@@ -176,7 +180,45 @@
                 </div>
                 <div class="learn">
                     <h3 class="learn__text">Learn more about our services</h3>
-                    <button class="learn__btn"><p class="learn__btn_text">View services</p></button>
+                    <a class="learn__btn" href="#!"><p class="learn__btn_text">View services</p></a>
+                </div>
+            </div>
+        </section>
+        <section class="works">
+            <div class="container">
+                <div class="works__container">
+                <h2 class="works__title">Browse our selected projects<br>
+                    and learn more about our work</h2>
+                <ul class="work">
+                    <li class="work__case">
+                    <img class="work__image" src="images/sectionpage/RedFingerBuilding.png" alt="RedFingerBuilding">
+                    <div class="work__text">
+                        <h3 class="work__title">Red Finger Building</h3>
+                        <span class="work__desc">Business Centers</span>
+                    </div>
+                        <a class="case__btn" href="../Work/Project1/Project1.html">View Project</a>
+                    </li>
+                    <li class="work__case">
+                        <img class="work__image" src="images/sectionpage/CubesBuilding.png" alt="CubesBuilding">
+                        <div class="work__text">
+                            <h3 class="work__title">Cubes Building</h3>
+                            <span class="work__desc">Business Centers</span>
+                        </div>
+                        <a class="case__btn" href="../Work/Project1/Project1.html">View Project</a>
+                    </li>
+                    <li class="work__case">
+                        <img class="work__image" src="images/sectionpage/ThePencilBuilding.png" alt="ThePencilBuilding">
+                        <div class="work__text">
+                            <h3 class="work__title">The Pencil Building</h3>
+                            <span class="work__desc">Stores & Malls</span>
+                        </div>
+                        <a class="case__btn" href="../Work/Project1/Project1.html">View Project</a>
+                    </li>
+                </ul>
+                <div class="explore__work">
+                    <h3 class="explore__text">Explore all our works</h3>
+                    <a class="portfolio__btn" href="#!"><p class="portfolio__text_btn">View portfolio</p></a>
+                </div>
                 </div>
             </div>
         </section>
