--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/styles.css">
     <title>CREATEX</title>
+    <link rel="stylesheet" href="./css/styles.css">
+    <script defer src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script defer src="./swiper.js"></script>
 </head>
 <body>
     <header>
@@ -219,6 +221,63 @@
                     <h3 class="explore__text">Explore all our works</h3>
                     <a class="portfolio__btn" href="#!"><p class="portfolio__text_btn">View portfolio</p></a>
                 </div>
+                </div>
+            </div>
+        </section>
+        <section class="brands">
+            <div class="container">
+                <h2 class="brands__title">Supported by 12+ partners</h2>
+                <ul class="brands__list">
+                    <li class="brands__item">
+                        <img src="images/sectionpage/InDepthConsultingLogo.png" alt="In Depth Consulting">
+                    </li>
+                    <li class="brands__item">
+                        <img src="images/sectionpage/HigherFitLogo.png" alt="Higher Fit">
+                    </li>
+                    <li class="brands__item">
+                        <img src="images/sectionpage/SentinalConsultingLogo.png" alt="Sentinal Consulting">
+                    </li>
+                    <li class="brands__item">
+                        <img src="images/sectionpage/HappyHomeLogo.png" alt="Happy Home">
+                    </li>
+                    <li class="brands__item">
+                        <img src="images/sectionpage/ForSaleLogo.png" alt="For Sale">
+                    </li>
+                    <li class="brands__item">
+                        <img src="images/sectionpage/SunsetRealtyLogo.png" alt="Sunset Realty">
+                    </li>
+                </ul>
+                <div class="reviews">
+                    <div class="reviews__text">
+                        <h2>What our clients are saying</h2>
+                        <div class="swiper">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide">
+                                    <img src="images/Work/swiper_avatar.png" alt="Shawn Edwards">
+                                    <p>Ipsum aute sunt aliquip aute et occaecat. Anim minim do cillum eiusmod enim. Consectetur magna cillum consequat minim  laboris cillum laboris voluptate minim proident exercitation ullamco.</p>
+                                    <strong>Shawn Edwards</strong>
+                                    <span>Position, Company name</span>
+                                </div>
+                                <div class="swiper-slide">
+                                    <img src="images/Work/swiper_avatar.png" alt="Shawn Edwards">
+                                    <p>Ipsum aute sunt aliquip aute et occaecat. Anim minim do cillum eiusmod enim. Consectetur magna cillum consequat minim  laboris cillum laboris voluptate minim proident exercitation ullamco.</p>
+                                    <strong>Shawn Edwards</strong>
+                                    <span>Position, Company name</span>
+                                </div>
+                                <div class="swiper-slide">
+                                    <img src="images/Work/swiper_avatar.png" alt="Shawn Edwards">
+                                    <p>Ipsum aute sunt aliquip aute et occaecat. Anim minim do cillum eiusmod enim. Consectetur magna cillum consequat minim  laboris cillum laboris voluptate minim proident exercitation ullamco.</p>
+                                    <strong>Shawn Edwards</strong>
+                                    <span>Position, Company name</span>
+                                </div>
+                            </div>
+                            <div class="swiper-button-prev"></div>
+                            <div class="swiper-button-next"></div>
+                        </div>
+                    </div>
+                    <div class="reviews__image">
+                        <img src="images/Work/swiper_image.png" alt="our clients">
+                    </div>
                 </div>
             </div>
         </section>
