--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/styles.css">
     <script defer src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script defer src="./swiper.js"></script>
-    <link rel="stylesheet" href=".css/index.css">
+    <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
     <header>
