--- a/index.html
+++ b/index.html
@@ -283,6 +283,29 @@
                 </div>
             </div>
         </section>
+        <section class="figures">
+            <div class="container">
+                <h2 class="figures__title">Some facts and figures</h2>
+                <ul class="figures__item">
+                    <li class="figure__item">
+                        <div class="pie animate no-round" style="--p:98;--c:#F89828;--b:10px"> 98%</div>
+                    <p class="figures__text">Totally satisfied clients</p>
+                    </li>
+                    <li class="figure__item">
+                        <div class="pie animate no-round" style="--p:20;--c:#F52F6E;--b:10px"> 20</div>
+                    <p class="figures__text">Years of experience</p>
+                    </li>
+                    <li class="figure__item">
+                        <div class="pie animate no-round" style="--p:75;--c:#5A87FC;--b:10px"> 7500</div>
+                    <p class="figures__text">Working hours spent</p>
+                    </li>
+                    <li class="figure__item">
+                        <div class="pie animate no-round" style="--p:100;--c:#03CEA4;--b:10px"> 100%</div>
+                    <p class="figures__text">Succeeded projects</p>
+                    </li>
+                </ul>
+            </div>
+        </section>
         <section class="feedback">
             <div class="container">
                 <form class="form" action="#">
